--- a/src/partials/06_form.html
+++ b/src/partials/06_form.html
@@ -2,14 +2,26 @@
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
-                <svg viewBox="0 0 384 512"
-                     class="fill-current w-4 h-4 mx-auto my-2">
+
+                <svg class="fill-current w-4 h-4 mx-auto my-2"
+                     xmlns="http://www.w3.org/2000/svg"
+                     viewBox="-4 -2 24 24"
+                     width="24"
+                     height="24"
+                     preserveAspectRatio="xMinYMin"
+                     class="jam-icon jam-1">
                     <path
-                          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z">
+                          d="M3 0h10a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1 7a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2H4zM4 3a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2H4z">
                     </path>
                 </svg>
-                Hol dir das Corona Whitepaper
+                Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
+            <p class="max-w-lg ml-auto text-blue-500">
+                Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
+                unseren Newsletter an. <br>
+                Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
+                regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
+            </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
                     scrolling="no"
