--- a/src/partials/whitepaper-link.html
+++ b/src/partials/whitepaper-link.html
@@ -1,11 +1,16 @@
 <a
    class="inline-block text-tiny leading-loose px-6 rounded-lg border-white border cursor-pointer transition-transform duration-100 transform scale-100  hover:scale-105">
+
     <svg class="fill-current h-4 w-4 inline"
-         viewBox="0 0 14 14"
-         xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.906 0h2.188c.182 0 .337.064.465.191a.633.633 0 01.191.465V5.25h2.406c.237 0 .401.114.492.342.092.228.055.424-.109.588l-4.156 4.156a.525.525 0 01-.766 0L2.461 6.18c-.164-.164-.2-.36-.11-.588.092-.228.256-.342.493-.342H5.25V.656c0-.182.064-.337.191-.465A.633.633 0 015.906 0zM14 10.281v3.063a.633.633 0 01-.191.465.633.633 0 01-.465.191H.656a.633.633 0 01-.465-.191.633.633 0 01-.191-.465V10.28c0-.182.064-.337.191-.465a.633.633 0 01.465-.191h4.02l1.34 1.34c.273.273.601.41.984.41s.71-.137.984-.41l1.34-1.34h4.02c.182 0 .337.064.465.191a.633.633 0 01.191.465zm-3.555 2.79a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0zm1.75 0a.525.525 0 000-.766.525.525 0 00-.765 0 .525.525 0 000 .765.525.525 0 00.765 0z"
-              fill="#FFF"
-              fill-rule="evenodd" />
+         xmlns="http://www.w3.org/2000/svg"
+         viewBox="-2 -2 24 24"
+         width="24"
+         height="24"
+         preserveAspectRatio="xMinYMin"
+         class="jam-icon jam-0">
+        <path
+              d="M2.328 6.868l7.017 6.253a1 1 0 0 0 1.33 0l7.009-6.246-7.137-4.665a1 1 0 0 0-1.094 0L2.328 6.868zM18 7.082v2.19l-5.994 5.342a3 3 0 0 1-3.992 0L2 9.254V7.083 18h16V7.082zM.906 5.408L8.359.536a3 3 0 0 1 3.282 0l7.453 4.872A2 2 0 0 1 20 7.082V18a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V7.082a2 2 0 0 1 .906-1.674z">
+        </path>
     </svg>
-    Corona Whitepaper
+    Corona News
 </a>
