Neue Texte gettup
Überarbeitung mit neuen Texten

--- a/src/partials/03_wir.html
+++ b/src/partials/03_wir.html
@@ -1,9 +1,8 @@
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Wir sind <b class="font-bold">gettup</b>.
+        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!.
     </h2>
     <p class="max-w-lg ml-auto">
-        Wir halten Dir bei Finanzen, Kontaktmanagement und Datenschutz den Rücken frei. Alles, damit Du Dich als NGO auf
-        das Wichtigste konzentrieren kannst: Dein Thema, das Dir am Herzen liegt.
+        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Dir den Rücken frei, damit Du Dich voll und ganz für das engagieren kannst, was Dir am Herzen liegt.
     </p>
 </section>
