--- a/src/partials/02_ihr.html
+++ b/src/partials/02_ihr.html
@@ -3,7 +3,10 @@
         <ul class="ms-slider__words">
             <li class="ms-slider__word"><b class="font-bold">Weltverbesserer</b>innen</li>
             <li class="ms-slider__word"><b class="font-bold">Ideenwahrwerdenlasser</b>innen</li>
-            <li class="ms-slider__word"><b class="font-bold">Lorem</b>innen</li>
+            <li class="ms-slider__word"><b class="font-bold">Möglichmacher</b>innen</li>
+            <li class="ms-slider__word"><b class="font-bold">Hoffnungsschenker</b>innen</li>
+            <li class="ms-slider__word"><b class="font-bold">Perspektivenzeiger</b>innen</li>
+            <li class="ms-slider__word"><b class="font-bold">Zukunftsgestalter</b>innen</li>
             <!-- This last word needs to duplicate the first one to ensure a smooth infinite animation -->
             <li class="ms-slider__word"><b class="font-bold">Weltverbesserer</b>innen</li>
         </ul>
@@ -12,9 +15,6 @@
         Ihr <b class="font-bold">verändert</b> alles
     </h2>
     <p class="max-w-lg ml-auto">
-        Ihr seid der Motor der Gesellschaft. Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr
-        strebt nicht nach Reichtum oder Promistatus. Ihr macht es, weil Euch die Sache am Herzen liegt. Weil Ihr die
-        Menschen, Tiere oder die Umwelt liebt. Wofür auch immer Ihr euch engagiert, Ihr gebt Euer Bestes. Und das hat
-        die beste Unterstützung verdient.
+        Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr macht es, weil euch die Sache am Herzen liegt. Weil ihr die Menschen, Tiere oder die Umwelt liebt. Wofür auch immer ihr euch engagiert, Ihr gibt euer Bestes. Und das hat die beste Unterstützung verdient.
     </p>
 </section>
