--- a/src/partials/07_form.html
+++ b/src/partials/07_form.html
@@ -17,10 +17,7 @@
                 Jetzt schon <b class="font-bold">neugierig</b>?
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                Dann erfahre als einer der ersten alle Details über gettup und melde Dich für
-                unseren Newsletter an. <br>
-                Einfach E-Mail-Adresse eintragen und schon geht´s los. Als Dankeschön versorgen wir Dich ab sofort und
-                regelmäßig mit hilfreichen Infos zu den geplanten Corona Staatshilfen für gemeinnützige Organisationen.
+                In unserem Newsletter geben wir einen Einblick in die gettup Plattform und informieren derzeit auch über aktuelle Tipps zu privaten und öffentlichen <b class="font-bold">Corona Hilfsangeboten</b>.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
