--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -14,8 +14,8 @@
     <title>Gettup</title>
 
     <link rel="stylesheet"
-          href="./assets/css/app.css" />
-    <script src="./assets/js/app.js"></script>
+          href="./home/assets/css/app.css" />
+    <script src="./home/assets/js/app.js"></script>
     <script>
         (function (w, d, s, l, i) {
             w[l] = w[l] || [];
