--- a/src/partials/03_wir.html
+++ b/src/partials/03_wir.html
@@ -3,6 +3,6 @@
         Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!.
     </h2>
     <p class="max-w-lg ml-auto">
-        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Dir den Rücken frei, damit Du Dich voll und ganz für das engagieren kannst, was Dir am Herzen liegt.
+        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Euch den Rücken frei, damit Ihr Euch voll und ganz für das engagieren könnt, was Euch am Herzen liegt.
     </p>
 </section>
