--- a/src/partials/04_was-spricht-für-uns.html
+++ b/src/partials/04_was-spricht-für-uns.html
@@ -6,23 +6,23 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Dich zukunftsfit.</b> Du bekommst ein digitales Zuhause für Deine Verwaltung und bleibst immer up to date. Klingt gut, oder?!</p>
+                <p><b>Wir machen Euch zukunftsfit.</b> Ihr bekommt ein digitales Zuhause für Eure Verwaltung und bleibt immer up to date. Klingt gut, oder?!</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns kannst Du Dein Augenmerk endlich wieder auf Kernaufgaben richten.</p>
+                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns könnt Ihr Euer Augenmerk endlich wieder auf Kernaufgaben richten.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir setzen auf Einfachheit.</b> Du wirst sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
+                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Dir Mobilität.</b> Deine Verwaltung hast Du künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
+                <p><b>Wir bieten Euch Mobilität.</b> Eure Verwaltung habt Ihr künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Dir Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns bist Du immer auf der sicheren Seite.
+                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns seid Ihr immer auf der sicheren Seite.
             </li>
         </ul>
     </div>
