--- a/src/partials/03_wir.html
+++ b/src/partials/03_wir.html
@@ -1,6 +1,6 @@
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!.
+        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!
     </h2>
     <p class="max-w-lg ml-auto">
         Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Euch den Rücken frei, damit Ihr Euch voll und ganz für das engagieren könnt, was Euch am Herzen liegt.
