--- a/src/partials/06_warum-gibt-es-gettup.html
+++ b/src/partials/06_warum-gibt-es-gettup.html
@@ -3,6 +3,6 @@
         Warum gibt es <b class="font-bold">gettup</b>?
     </h2>
     <p class="max-w-lg ml-auto">
-        Wir finden: Alle Menschen, die in NGOs leidenschaftlich für ihre Sache kämpfen, haben im Zuge der Digitalisierung die beste Unterstützung verdient. Ihr handelt aus tiefster Überzeugung, ihr brennt für Euer Thema – und mit genau diesem Engagement wollen wir nun Euch unterstützen. Digitale Verwaltung soll für Euch kein Problem mehr sein, sondern einfach und schnell erledigt. gettup ist startklar. Ihr auch?
+        Wir finden: Alle Menschen, die in NGOs leidenschaftlich für ihre Sache kämpfen, haben im Zuge der Digitalisierung die beste Unterstützung verdient. Ihr handelt aus tiefster Überzeugung, Ihr brennt für Euer Thema – und mit genau diesem Engagement wollen auch wir Euch unterstützen. Digitale Verwaltung soll für Euch keine Hürde sein, sondern einfach und schnell erledigt. gettup ist startklar. Ihr auch?
     </p>
 </section>
