--- a/src/partials/03_wir.html
+++ b/src/partials/03_wir.html
@@ -1,8 +1,8 @@
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        Endlich wird´s einfach – mit <b class="font-bold">gettup</b>!
+        <b class="font-bold">gettup</b> kommt. Für Euch.
     </h2>
     <p class="max-w-lg ml-auto">
-        Von Spenden-Orga bis Kontaktpflege: NGOs haben in der Verwaltung allerhand zu tun. Bald gibt´s aber konkrete Hilfe: „gettup“ kommt! Wir halten Euch den Rücken frei, damit Ihr Euch voll und ganz für das engagieren könnt, was Euch am Herzen liegt.
+        Von Mitgliederverwaltung bis Buchhaltung: Als NGO habt Ihr in der Administration allerhand zu tun. Mit den digitalen Tools von gettup bekommt Ihr Eure Verwaltungsarbeit schneller und einfacher erledigt. So könnt Ihr Euch auf das Wichtigste konzentrieren: Das Thema, das Euch am Herzen liegt.
     </p>
 </section>
