--- a/src/partials/04_was-spricht-für-uns.html
+++ b/src/partials/04_was-spricht-für-uns.html
@@ -6,23 +6,23 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Euch zukunftsfit.</b> Ihr bekommt ein digitales Zuhause für Eure Verwaltung und bleibt immer up to date. Klingt gut, oder?!</p>
+                <p><b>Wir machen Euch bereit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir sorgen für mehr Zeit.</b> Keine lästige Administration mehr: Mit uns könnt Ihr Euer Augenmerk endlich wieder auf Kernaufgaben richten.</p>
+                <p><b>Wir schaufeln Euch Zeit frei.</b> Ihr vereinfacht mit gettup Eure Administration und könnt Euch so auf Eure Kernaufgaben konzentrieren.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unser Portal ist intuitiv aufgebaut und völlig easy in der Handhabung.</p>
+                <p><b>Wir setzen auf Einfachheit.</b> Ihr werdet sehen: Unsere Plattform ist übersichtlich aufgebaut und lässt sich intuitiv bedienen.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Euch Mobilität.</b> Eure Verwaltung habt Ihr künftig an jedem Ort der Welt dabei – das ist heute einfach ein Muss.</p>
+                <p><b>Wir sind da, wo Ihr seid.</b> Ob zu Hause auf dem Rechner oder von unterwegs auf dem Smartphone: Arbeitet mit uns wo Ihr wollt.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Aber bei uns seid Ihr immer auf der sicheren Seite.
+                <p><b>Wir bieten Euch Sicherheit.</b> Gesetzliche Regeln zu Datenschutz und Co. ändern sich schnell. Bei uns seid Ihr immer auf der sicheren Seite.</p>
             </li>
         </ul>
     </div>
