--- a/src/partials/05_worum-gehts-konkret.html
+++ b/src/partials/05_worum-gehts-konkret.html
@@ -3,6 +3,6 @@
         Worum geht´s <b class="font-bold">konkret</b>?
     </h2>
     <p class="max-w-lg ml-auto">
-        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. Eure gesamte Einnahmen- und Ausgaben-Orga ist bei uns einfach nur noch einfach. Übersichtlich. Auf Knopfdruck verfügbar. Da wird die Steuererklärung zum Kinderspiel. Auch beim wichtigen Thema „Kontakte“ helfen wir Euch natürlich. All das könnt Ihr auf unserem Portal ganz einfach organisieren. Klar, dass wir dabei immer auf höchste Sicherheitsstandards setzen. Und wir wissen auch: Nichts ist für NGOs wichtiger als Präsenz! Deshalb könnt Ihr bei uns auch Profil- und Projektseiten anlegen, auf denen Ihr Eure Botschaften und Spendenkanäle präsentieren und in sozialen Netzwerken teilen könnt.
+        Kurz gesagt: Wir helfen Euch bei dem, was Zeit und Nerven kostet. Finanzen, zum Beispiel. Mit gettup wird die nächste Steuererklärung zum Kinderspiel, denn sämtliche Einnahmen und Ausgaben sind übersichtlich und auf Knopfdruck verfügbar. Daten von Mitgliedern und Spendern intuitiv erfassen und datenschutzkonform vorhalten? Aber ja, gettup ist absolut zuverlässig, denn wir setzen kompromisslos auf die höchsten Sicherheitsstandards. Und wir wissen auch: Nichts ist für eine NGO so wichtig wie ein guter Auftritt im Internet. Deshalb bekommt Ihr bei gettup auch eine Website und könnt so, ganz ohne Programmierkenntnisse, Eure Projekte und Spendenkanäle präsentieren und in sozialen Netzwerke teilen.
     </p>
 </section>
