--- a/src/partials/03_wir.html
+++ b/src/partials/03_wir.html
@@ -1,6 +1,6 @@
 <section class="snap-container">
     <h2 class="text-3xl lg:text-5xl leading-tight font-hairline pb-8">
-        <b class="font-bold">gettup</b> kommt. Für Euch.
+        <b class="font-bold">gettup</b> kommt.<br>Für Euch.
     </h2>
     <p class="max-w-lg ml-auto">
         Von Mitgliederverwaltung bis Buchhaltung: Als NGO habt Ihr in der Administration allerhand zu tun. Mit den digitalen Tools von gettup bekommt Ihr Eure Verwaltungsarbeit schneller und einfacher erledigt. So könnt Ihr Euch auf das Wichtigste konzentrieren: Das Thema, das Euch am Herzen liegt.
