Text- und CSS-Änderungen

--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -11,10 +11,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0" />
-    <title>Gettup</title>
+    <title>gettup - Digitale Werkzeuge für gemeinnützige Organisationen</title>
 
     <link rel="stylesheet"
           href="./home/assets/css/app.css" />
+    <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="/images/webclip.png" rel="apple-touch-icon">
     <script src="./home/assets/js/app.js"></script>
     <script>
         (function (w, d, s, l, i) {
