--- a/src/partials/01_home.html
+++ b/src/partials/01_home.html
@@ -7,9 +7,9 @@
         <b class="font-bold">home</b>
     </h1>
     <span class="text-xl">
-        Willkommen im digitalen Zuhause<br />
+        Willkommen bei <b class="font-bold">gettup</b>, der Software-Plattform<br>
         <b>
-            für Vereine, Organisationen und Stiftungen
+            für gemeinnützige Vereine, Organisationen und Stiftungen.
         </b>
     </span>
     <div class="lg:hidden pt-16">
