--- a/src/partials/02_ihr.html
+++ b/src/partials/02_ihr.html
@@ -12,6 +12,6 @@
         Ihr <b class="font-bold">verändert</b> alles
     </h2>
     <p class="max-w-lg ml-auto">
-        Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr macht es, weil euch die Sache am Herzen liegt. Weil ihr die Menschen, Tiere oder die Umwelt liebt. Wofür auch immer ihr euch engagiert, Ihr gibt euer Bestes. Und das hat die beste Unterstützung verdient.
+        Ihr investiert Herzblut, Leidenschaft und unbezahlte Arbeitsstunden. Ihr macht es, weil Euch die Sache am Herzen liegt. Weil Ihr Menschen, Tiere oder die Umwelt liebt. Wofür auch immer Ihr Euch engagiert, Ihr gebt Euer Bestes. Und das hat die beste Unterstützung verdient.
     </p>
 </section>
