--- a/src/partials/04_was-spricht-für-uns.html
+++ b/src/partials/04_was-spricht-für-uns.html
@@ -6,11 +6,7 @@
         <ul class="pl-12">
             <li class="relative">
                 <include src="arrow-right.html"></include>
-                <p><b>Wir machen Euch bereit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
-            </li>
-            <li class="relative">
-                <include src="arrow-right.html"></include>
-                <p><b>Wir schaufeln Euch Zeit frei.</b> Ihr vereinfacht mit gettup Eure Administration und könnt Euch so auf Eure Kernaufgaben konzentrieren.</p>
+                <p><b>Wir machen Euch fit für die Zukunft.</b> Ihr schafft Euch bei uns ein digitales Zuhause, das wir stetig weiterentwickeln.</p>
             </li>
             <li class="relative">
                 <include src="arrow-right.html"></include>
