--- a/src/partials/07_form.html
+++ b/src/partials/07_form.html
@@ -2,22 +2,10 @@
     <div class="max-w-xl lg:mt-0 mx-auto rounded-lg overflow-hidden shadow-lg bg-white">
         <div class="p-8 lg:p-12 text-center">
             <div class="font-bold text-xl lg:text-2xl mb-8 text-blue-500 text-center">
-
-                <svg class="fill-current w-4 h-4 mx-auto my-2"
-                     xmlns="http://www.w3.org/2000/svg"
-                     viewBox="-4 -2 24 24"
-                     width="24"
-                     height="24"
-                     preserveAspectRatio="xMinYMin"
-                     class="jam-icon jam-1">
-                    <path
-                          d="M3 0h10a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1 7a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h5a1 1 0 0 0 0-2H4zM4 3a1 1 0 1 0 0 2h8a1 1 0 0 0 0-2H4zm0 8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2H4z">
-                    </path>
-                </svg>
-                Jetzt schon <b class="font-bold">neugierig</b>?
+                Corona-Hilfe News
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                In unserem Newsletter geben wir einen Einblick in die gettup Plattform und informieren derzeit auch über aktuelle Tipps zu privaten und öffentlichen <b class="font-bold">Corona Hilfsangeboten</b>.
+                Unser Newsletter informiert über aktuelle <b class="font-bold">Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
