Logo animation classes

--- a/src/partials/arrow-right.html
+++ b/src/partials/arrow-right.html
@@ -1,5 +1,5 @@
 <svg viewBox="0 0 30 16"
-     class="fill-current inline absolute h-3 mr-3 -ml-12 lg:h-4 lg:mr-4"
+     class="fill-current inline absolute mt-1 h-3 mr-3 -ml-12 lg:h-4 lg:mr-4"
      xmlns="http://www.w3.org/2000/svg">
     <g stroke="#FFF"
        fill="none"
