--- a/src/partials/07_form.html
+++ b/src/partials/07_form.html
@@ -5,7 +5,7 @@
                 Corona-Hilfe News
             </div>
             <p class="max-w-lg ml-auto text-blue-500">
-                Unser Newsletter informiert über aktuelle <b class="font-bold">Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
+                Unser Newsletter informiert über aktuelle <b>Corona Hilfsangebote</b> und gibt einen Einblick in den derzeitigen Stand der gettup Plattform.
             </p>
             <iframe class="mj-w-res-iframe"
                     frameborder="0"
@@ -13,7 +13,8 @@
                     marginheight="0"
                     marginwidth="0"
                     src="https://app.mailjet.com/widget/iframe/5n6j/Ecq"
-                    width="100%"></iframe>
+                    width="100%">
+                    </iframe>
 
             <script type="text/javascript"
                     src="https://app.mailjet.com/statics/js/iframeResizer.min.js"></script>
