--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -12,6 +12,15 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0" />
     <title>gettup - Digitale Werkzeuge für gemeinnützige Organisationen</title>
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." name="description">
+    <meta content="gettup - Digitale Werkzeuge für gemeinnützige Organisationen" property="og:title">
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." property="og:description">
+    <meta content="https://www.gettup.de/images/og-image_gettup_1200x630.png" property="og:image">
+    <meta content="gettup - Digitale Werkzeuge für gemeinnützige Organisationen" property="twitter:title">
+    <meta content="Willkommen bei gettup, der Software-Plattform für gemeinnützige Vereine, Organisationen und Stiftungen." property="twitter:description">
+    <meta content="https://www.gettup.de/images/og-image_gettup_1200x630.png" property="twitter:image">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
 
     <link rel="stylesheet"
           href="./home/assets/css/app.css" />
